--- a/index.html
+++ b/index.html
@@ -5,14 +5,13 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>vue-manage-system</title>
+  <title>乐云一的管理后台</title>
   <link rel="stylesheet" href="https://at.alicdn.com/t/font_830376_qzecyukz0s.css">
 </head>
 
 <body>
   <noscript>
-    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
-      Please enable it to continue.</strong>
+    <strong></strong>
   </noscript>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
